tests/error/continue_outside_loop.vow
// TEST: stderr "outside of a loop"
module ContinueOutsideLoop

fn main() -> i32 {
    continue;
    0
}
